[metadata]
name = clouni-client
version = 0.1.1
summary = Cloud Application Management Tool by TOSCA.
long_description = file: README.md
long_description_content_type = text/markdown
description-file = README.md
author = bura2017
author-email = shvetcova@ispras.ru
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    grpc_client
    ansible_plugins
    artifacts

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    clouni = grpc_client.clouni_client:main
